The current version of Ruby Reports is 0.4.15

changes since 0.4.13

- Added DataSet#rename_columns

- Added taggable mixin

- Added an options accessor to help solve ticket #8

- Alioth now has a powerful hook back into the engine from plugins via helpers

- added action / attribute methods for format engine / plugin

- added accessor style methods to DataRow via method_missing

- added prune method for Table formmatting. 

changes since 0.4.11

- Added high level hook Report#text_processor which essentially works like
  Format.register_filter

- Report can now run single or multiple reports and do things such as send them
  via email or write/append them to files.

- Report has been overhauled to have a simple DSL

- Mailfactory is now a gem dependency.  If you install via setup.rb or building
  the gem yourself, you only need it if you plan to use Ruport::Mailer

- Report#query now has an 'as' method that allows direct translation of a query
  to a particular format, e.g.

  query "select * from ruport", :as => :pdf

- Lots of bug fixes and cleanup

- Ruport is now on Trac.
  http://stonecode.svnrepository.com/ruport/

- I apparently never knew how to use inject.  
  Injects are all functional now.

- Fixed a bug in DataSet that made fields not get duped properly

changes since 0.4.9

- DataSet#column_names and DataRow#column_names have been added as alias to
  fields.

- Plugins are now safely copied when used via DataSet#as or the generated
  Format::simple_interface(Format.table,Format.document,etc)

- Dropped insert_row / insert_column from Format::Engine::Table.
  These are no longer needed.

- Reworked format engine unit tests to decouple from specific plugins.

- vendored SystemExtensions from HighLine to get terminal_width /
  terminal_height functions

- DataSet#add_columns and DataSet#add_columns! has been added

- Added pre and post hooks for Plugins.  Individual plugins choose if and 
  how to implement them.

- Parser is gone
